// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a list of webhook endpoints that have been configured 1`] = `
<div
  className="Box-root HorizontalGutter-root HorizontalGutter-double"
  data-testid="webhooks-container"
>
  <div
    className="CallOut-root CallOut-colorPrimary CallOut-fullWidth"
  >
    <div
      className="CallOut-inner"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-md coral coral-icon ExperimentalCallOut-icon"
        >
          new_releases
        </i>
        <span
          className="ExperimentalCallOut-title"
        >
          Experimental Feature
        </span>
      </div>
      <span>
        The webhook feature is currently in active development. Events may be
added or removed. Please 
        <a
          className="ExternalLink-root"
          href="https://coralproject.net/contact/"
          rel="noopener noreferrer"
          target="_blank"
        >
          contact us with any feedback or requests
        </a>
        .
      </span>
    </div>
  </div>
  <div
    className="Box-root ConfigBox-root"
  >
    <div
      className="Box-root Flex-root ConfigBox-title Flex-flex Flex-justifySpaceBetween"
    >
      <div>
        <label
          className="Header-root"
          htmlFor="configure-webhooks-header.title"
        >
          Configure webhook endpoint
        </label>
      </div>
      <div />
    </div>
    <div
      className="ConfigBox-content"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-spacing-4"
      >
        <p
          className="FormFieldDescription-root"
        >
          Configure an endpoint to send events to when events occur within
Coral. These events will be JSON encoded and signed. To learn more
about webhook signing, visit our 
          <a
            className="ExternalLink-root"
            href="https://github.com/coralproject/talk/blob/main/WEBHOOKS.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Webhook Guide
          </a>
          .
        </p>
        <a
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular Button-uppercase Button-iconLeft"
          data-testid="add-webhook-endpoint"
          data-variant="regular"
          href="/admin/configure/webhooks/add"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-md coral coral-icon"
          >
            add
          </i>
          Add webhook endpoint
        </a>
        <h3
          className="Subheader-root"
        >
          Endpoints
        </h3>
        <table
          className="Table-root Table-fullWidth"
        >
          <thead
            className="TableHead-root"
          >
            <tr
              className="TableRow-root"
            >
              <th
                className="TableCell-root TableCell-header"
              >
                URL
              </th>
              <th
                className="TableCell-root TableCell-header"
              >
                Status
              </th>
              <th
                className="TableCell-root TableCell-header"
              />
            </tr>
          </thead>
          <tbody
            className="TableBody-root"
          >
            <tr
              className="TableRow-root TableRow-body"
              data-testid="webhook-endpoint-webhook-endpoint-1"
            >
              <td
                className="TableCell-root WebhookEndpointRow-urlColumn TableCell-body"
              >
                http://example.com/webhook-endpoint-1
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <span
                  className="Marker-root StatusMarker-success Marker-colorPending Marker-variantRegular"
                >
                  Enabled
                </span>
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
                >
                  <a
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase Button-iconRight"
                    data-variant="text"
                    href="/admin/configure/webhooks/endpoint/webhook-endpoint-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    Details 
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm coral coral-icon"
                    >
                      keyboard_arrow_right
                    </i>
                  </a>
                </div>
              </td>
            </tr>
            <tr
              className="TableRow-root TableRow-body"
              data-testid="webhook-endpoint-webhook-endpoint-2"
            >
              <td
                className="TableCell-root WebhookEndpointRow-urlColumn TableCell-body"
              >
                http://example.com/webhook-endpoint-2
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <span
                  className="Marker-root StatusMarker-error Marker-colorPending Marker-variantRegular"
                >
                  Disabled
                </span>
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
                >
                  <a
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase Button-iconRight"
                    data-variant="text"
                    href="/admin/configure/webhooks/endpoint/webhook-endpoint-2"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    Details 
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm coral coral-icon"
                    >
                      keyboard_arrow_right
                    </i>
                  </a>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`goes to add new webhook endpoint when clicking add 1`] = `
<div
  className="Box-root HorizontalGutter-root HorizontalGutter-double"
  data-testid="webhooks-container"
>
  <div
    className="CallOut-root CallOut-colorPrimary CallOut-fullWidth"
  >
    <div
      className="CallOut-inner"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-md coral coral-icon ExperimentalCallOut-icon"
        >
          new_releases
        </i>
        <span
          className="ExperimentalCallOut-title"
        >
          Experimental Feature
        </span>
      </div>
      <span>
        The webhook feature is currently in active development. Events may be
added or removed. Please 
        <a
          className="ExternalLink-root"
          href="https://coralproject.net/contact/"
          rel="noopener noreferrer"
          target="_blank"
        >
          contact us with any feedback or requests
        </a>
        .
      </span>
    </div>
  </div>
  <div
    className="Box-root ConfigBox-root"
  >
    <div
      className="Box-root Flex-root ConfigBox-title Flex-flex Flex-justifySpaceBetween"
    >
      <div>
        <label
          className="Header-root"
          htmlFor="configure-webhooks-header.title"
        >
          Configure webhook endpoint
        </label>
      </div>
      <div />
    </div>
    <div
      className="ConfigBox-content"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-spacing-4"
      >
        <p
          className="FormFieldDescription-root"
        >
          Configure an endpoint to send events to when events occur within
Coral. These events will be JSON encoded and signed. To learn more
about webhook signing, visit our 
          <a
            className="ExternalLink-root"
            href="https://github.com/coralproject/talk/blob/main/WEBHOOKS.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Webhook Guide
          </a>
          .
        </p>
        <a
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular Button-uppercase Button-iconLeft"
          data-testid="add-webhook-endpoint"
          data-variant="regular"
          href="/admin/configure/webhooks/add"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-md coral coral-icon"
          >
            add
          </i>
          Add webhook endpoint
        </a>
        <h3
          className="Subheader-root"
        >
          Endpoints
        </h3>
        <div
          className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
        >
          <div
            className="CallOut-inner"
          >
            There are no webhook endpoints configured, add one above.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`goes to the webhook endpoint configuration page when selected 1`] = `
<div
  className="Box-root HorizontalGutter-root HorizontalGutter-double"
  data-testid="webhooks-container"
>
  <div
    className="CallOut-root CallOut-colorPrimary CallOut-fullWidth"
  >
    <div
      className="CallOut-inner"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-md coral coral-icon ExperimentalCallOut-icon"
        >
          new_releases
        </i>
        <span
          className="ExperimentalCallOut-title"
        >
          Experimental Feature
        </span>
      </div>
      <span>
        The webhook feature is currently in active development. Events may be
added or removed. Please 
        <a
          className="ExternalLink-root"
          href="https://coralproject.net/contact/"
          rel="noopener noreferrer"
          target="_blank"
        >
          contact us with any feedback or requests
        </a>
        .
      </span>
    </div>
  </div>
  <div
    className="Box-root ConfigBox-root"
  >
    <div
      className="Box-root Flex-root ConfigBox-title Flex-flex Flex-justifySpaceBetween"
    >
      <div>
        <label
          className="Header-root"
          htmlFor="configure-webhooks-header.title"
        >
          Configure webhook endpoint
        </label>
      </div>
      <div />
    </div>
    <div
      className="ConfigBox-content"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-spacing-4"
      >
        <p
          className="FormFieldDescription-root"
        >
          Configure an endpoint to send events to when events occur within
Coral. These events will be JSON encoded and signed. To learn more
about webhook signing, visit our 
          <a
            className="ExternalLink-root"
            href="https://github.com/coralproject/talk/blob/main/WEBHOOKS.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Webhook Guide
          </a>
          .
        </p>
        <a
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular Button-uppercase Button-iconLeft"
          data-testid="add-webhook-endpoint"
          data-variant="regular"
          href="/admin/configure/webhooks/add"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-md coral coral-icon"
          >
            add
          </i>
          Add webhook endpoint
        </a>
        <h3
          className="Subheader-root"
        >
          Endpoints
        </h3>
        <table
          className="Table-root Table-fullWidth"
        >
          <thead
            className="TableHead-root"
          >
            <tr
              className="TableRow-root"
            >
              <th
                className="TableCell-root TableCell-header"
              >
                URL
              </th>
              <th
                className="TableCell-root TableCell-header"
              >
                Status
              </th>
              <th
                className="TableCell-root TableCell-header"
              />
            </tr>
          </thead>
          <tbody
            className="TableBody-root"
          >
            <tr
              className="TableRow-root TableRow-body"
              data-testid="webhook-endpoint-webhook-endpoint-1"
            >
              <td
                className="TableCell-root WebhookEndpointRow-urlColumn TableCell-body"
              >
                http://example.com/webhook-endpoint-1
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <span
                  className="Marker-root StatusMarker-success Marker-colorPending Marker-variantRegular"
                >
                  Enabled
                </span>
              </td>
              <td
                className="TableCell-root TableCell-body"
              >
                <div
                  className="Box-root Flex-root Flex-flex Flex-justifyFlexEnd"
                >
                  <a
                    className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantText Button-uppercase Button-iconRight"
                    data-variant="text"
                    href="/admin/configure/webhooks/endpoint/webhook-endpoint-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    type="button"
                  >
                    Details 
                    <i
                      aria-hidden="true"
                      className="Icon-root Icon-sm coral coral-icon"
                    >
                      keyboard_arrow_right
                    </i>
                  </a>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders webhooks 1`] = `
<div
  className="Box-root HorizontalGutter-root HorizontalGutter-double"
  data-testid="webhooks-container"
>
  <div
    className="CallOut-root CallOut-colorPrimary CallOut-fullWidth"
  >
    <div
      className="CallOut-inner"
    >
      <div
        className="Box-root Flex-root Flex-flex"
      >
        <i
          aria-hidden="true"
          className="Icon-root Icon-md coral coral-icon ExperimentalCallOut-icon"
        >
          new_releases
        </i>
        <span
          className="ExperimentalCallOut-title"
        >
          Experimental Feature
        </span>
      </div>
      <span>
        The webhook feature is currently in active development. Events may be
added or removed. Please 
        <a
          className="ExternalLink-root"
          href="https://coralproject.net/contact/"
          rel="noopener noreferrer"
          target="_blank"
        >
          contact us with any feedback or requests
        </a>
        .
      </span>
    </div>
  </div>
  <div
    className="Box-root ConfigBox-root"
  >
    <div
      className="Box-root Flex-root ConfigBox-title Flex-flex Flex-justifySpaceBetween"
    >
      <div>
        <label
          className="Header-root"
          htmlFor="configure-webhooks-header.title"
        >
          Configure webhook endpoint
        </label>
      </div>
      <div />
    </div>
    <div
      className="ConfigBox-content"
    >
      <div
        className="Box-root HorizontalGutter-root HorizontalGutter-spacing-4"
      >
        <p
          className="FormFieldDescription-root"
        >
          Configure an endpoint to send events to when events occur within
Coral. These events will be JSON encoded and signed. To learn more
about webhook signing, visit our 
          <a
            className="ExternalLink-root"
            href="https://github.com/coralproject/talk/blob/main/WEBHOOKS.md"
            rel="noopener noreferrer"
            target="_blank"
          >
            Webhook Guide
          </a>
          .
        </p>
        <a
          className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular Button-uppercase Button-iconLeft"
          data-testid="add-webhook-endpoint"
          data-variant="regular"
          href="/admin/configure/webhooks/add"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          onTouchEnd={[Function]}
          type="button"
        >
          <i
            aria-hidden="true"
            className="Icon-root Icon-md coral coral-icon"
          >
            add
          </i>
          Add webhook endpoint
        </a>
        <h3
          className="Subheader-root"
        >
          Endpoints
        </h3>
        <div
          className="CallOut-root CallOut-colorRegular CallOut-fullWidth"
        >
          <div
            className="CallOut-inner"
          >
            There are no webhook endpoints configured, add one above.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
